# SEU-WuHub

./: .gitignore  .prettierignore  Makefile  README.en.md  README.md  agent.md  docker-compose.yml  next.config.mjs  package.json  todo.md
backend/: .dockerignore  .env.example  Dockerfile  coverage-crawler.xml  pyproject.toml  sync_meilisearch.py
backend/agent/: .env.example  README.md  __init__.py  config.py  core.py  llm_client.py  memory.py  prompts.py  schemas.py  tools.py
backend/agent/core/: __init__.py  agent.py  parser.py
backend/agent/events/: __init__.py  stream.py  types.py
backend/agent/llm/: __init__.py  client.py
backend/agent/memory/: __init__.py  buffer.py
backend/agent/prompts/: react.jinja2  system.jinja2  tools.jinja2
backend/agent/tools/: __init__.py  detail.py  fetch.py  protocol.py  registry.py  search.py  sql.py
backend/app/: __init__.py  main.py
backend/app/api/v1/: articles.py  chat.py  metadata.py  search.py
backend/app/core/: config.py  constants.py  exceptions.py  lancedb_client.py  logging.py
backend/app/schemas/: agent.py  article.py  common.py  search.py
backend/app/services/: agent_service.py  articles_service.py  chat_service.py  search_service.py
backend/crawler/: README.md  __init__.py  cli.py  pytest.ini  requirements.txt
backend/crawler/adapters/: __init__.py  base.py  lance_adapter.py
backend/crawler/config_data/: browser.yaml  crawler.yaml
backend/crawler/config_data/websites/: example.yaml  seu.yaml  test_site.yaml
backend/crawler/examples/: quickstart.py
backend/crawler/spiders/: __init__.py  base.py
backend/crawler/src/: __init__.py  article_url_crawler.py  crawl4ai_config_utils.py  crawler.py  list_incremental_crawler.py  list_to_articles_e2e.py
backend/crawler/test/: conftest.py  test_list_incremental_crawler.py  test_list_to_articles_e2e.py  test_real_web_integration.py
backend/crawler/tests/: __init__.py  integration_test.py  test_crawler.py
backend/data/: __init__.py  connection.py  guard.py  repository.py  schema.py  tag_repository.py
backend/data/lancedb/articles.lance/_transactions/: 0-1e289168-6aa0-4a0c-bda1-79e7320f8ba2.txn  1-19adfabe-718d-4749-8221-6db4197bcbd0.txn  2-a8b43810-0bcb-4324-91fa-c0ad1db4a34e.txn  3-30283deb-7fa9-4f5e-9668-363258214618.txn  4-4199b738-29a8-4a70-ab15-b36585565eaf.txn  5-835c8f7b-7959-47a7-81d2-a35a785ceb3f.txn  6-f543c690-ab88-4ab4-9dcf-c38b85351c52.txn  7-370de32e-0512-44f2-8a66-112945f62549.txn  8-7a4e0591-d856-4623-972f-4ed71672213e.txn
backend/database/: __init__.py  connection.py  exceptions.py  guard.py  repository.py  schema.py  tag_repository.py  tag_schema.py
backend/ingestion/: __init__.py  dedup.py  embedder.py  normalizers.py  pipeline.py  tag_initializer.py  tag_matcher.py  validators.py
backend/ingestion/adapters/: crawler.py
backend/retrieval/: __init__.py  engine.py  models.py  store.py
backend/retrieval/schema/: article.py
backend/retrieval/utils/: embedding.py
backend/tests/: __init__.py  cli.py  conftest.py  run_smoke_agent_llm.ps1  smoke_agent.py  test_data_repository.py  test_module_imports.py  test_tag_matcher.py  test_tag_system.py
backend/tests/agent/: test_detail_tool.py  test_parser.py  test_registry.py  test_smoke.py  test_sse_stream.py
backend/tests/api/: test_articles.py  test_chat.py  test_search.py
backend/tests/crawler/: conftest.py  test_list_incremental_crawler.py  test_list_to_articles_e2e.py
backend/tests/database/: __init__.py  cli.py  conftest.py  test_data_repository.py  test_guard.py  test_repository_exception_handling.py  test_tag_matcher.py  test_tag_repository_integration.py  test_tag_system.py
backend/tests/ingestion/: __init__.py  conftest.py  test_dedup.py  test_embedder.py  test_embedder_integration.py  test_normalizers.py  test_pipeline.py  test_tag_initializer.py  test_tag_matcher.py  test_validators.py
backend/tests/retrieval/: __init__.py  conftest.py  test_embedding.py  test_engine.py  test_store.py  test_store_integration.py
(+203 files in other folders)
